[tool.poetry]
name = "jenkify"
version = "0.1.0"
description = ""
authors = ["Jonathan Lee <jonathan.lee.devel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
pyline = "^0.3.21"
typeguard = "^4.3.0"
pre-commit = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
